cluster/pi-hole/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pihole-dns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pihole
  name: pihole
  namespace: pihole-dns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      dnsPolicy: None
      dnsConfig:
        nameservers:
          #- 127.0.0.1
          - 0.0.0.0
          - 1.1.1.1
      containers:
      - image: visibilityspots/cloudflared
        imagePullPolicy: IfNotPresent
        name: cloudflared
        ports:
        - containerPort: 53
          name: dns
          protocol: TCP
        - containerPort: 67
          name: dns-udp
          protocol: UDP
      - env:
        - name: TZ
          value: "Europe/Oslo"
        - name: WEBPASSWORD
          value: admin
        - name: ServerIP
          #value: pihole.int.larshaugan.net
          value: 10.0.1.253
        - name: DNSMASQ_LISTENING
          value: 'all'
        - name: DNS1
          value: 127.0.0.1#5054 # Cloudflared runs on port 54
        - name: DNS2
          value: 127.0.0.1#5054 # Cloudflared runs on port 54
        image: pihole/pihole:latest
        imagePullPolicy: Always
        name: pihole
        ports:
        - containerPort: 80
          name: pihole-http
          protocol: TCP
        - containerPort: 53
          name: dns
          protocol: TCP
        - containerPort: 53
          name: dns-udp
          protocol: UDP
        - containerPort: 443
          name: pihole-ssl
          protocol: TCP
        - containerPort: 67
          name: client-udp
          protocol: UDP
        volumeMounts:
        - mountPath: /etc/pihole
          name: config
        - mountPath: /etc/dnsmasq.d/02-custom.conf
          name: pihole-custom-dnsmasq
          subPath: 02-custom.conf
        - name: pihole-adlists
          mountPath: /etc/pihole/adlists.list
          subPath: adlists.list
        - name: pihole-regex
          mountPath: /etc/pihole/regex.list
          subPath: regex.list
        - mountPath: /etc/pihole/whitelist.txt
          name: whitelist
          subPath: whitelist.txt

#        - mountPath: /etc/pihole/pihole-FTL.conf
#          name: pihole-ftl
#          subPath: pihole-FTL.conf
        securityContext:
          capabilities:        
            add:
              - NET_ADMIN  
      restartPolicy: Always
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: pihole
        - name: pihole-adlists
          configMap:
            name: pihole-adlists
        - name: pihole-regex
          configMap: 
            name: pihole-regex
        - name: pihole-custom-dnsmasq
          configMap:
            defaultMode: 420
            name: pihole-custom-dnsmasq
        - configMap:
            defaultMode: 420
            name: whitelist
          name: whitelist

#        - configMap:
#            #defaultMode: 420
#            name: pihole-ftl
#          name: pihole-ftl
#---
#apiVersion: v1
#kind: ConfigMap
#metadata:
#  name: pihole-ftl
#  namespace: pihole-dns
#data:
#  pihole-FTL.conf: |
#    except-interface=nonexisting
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pihole
  name: pihole-udp
  namespace: pihole-dns 
spec:
  ports:
  - name: dns-udp
    port: 53
    protocol: UDP
    targetPort: 53
  - name: client-udp
    port: 67
    protocol: UDP
    targetPort: 67
  selector:
    app: pihole
  externalTrafficPolicy: Local
  loadBalancerIP: 10.0.1.253
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pihole
  name: pihole
  namespace: pihole-dns 
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
  - name: dns
    port: 53
    protocol: TCP
    targetPort: 53
  selector:
    app: pihole
  externalTrafficPolicy: Local
  loadBalancerIP: 10.0.1.204
  type: LoadBalancer
