cluster/pi-hole/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: pihole-dns
  name: pihole
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: pihole.int.larshaugan.net
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    - secretName: pihole-tls
      hosts:
        - pihole.int.larshaugan.net
  rules:
  - host: pihole.int.larshaugan.net
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: pihole 
              port:
                 name: http
